# RustFSExample

./: .gitignore  Cargo.toml  README.md
src/: example.rs  serialize_binary.rs  serialize_text.rs
