[package]
name = "rust_fs_io"
version = "0.1.0"
authors = ["windbell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.1.4"

[[bin]]
name = "example"
path = "src/example.rs"

[[bin]]
name = "serialize_text"
path = "src/serialize_text.rs"

[[bin]]
name = "serialize_binary"
path = "src/serialize_binary.rs"